--- a/spring-petclinic-config-server/src/main/resources/application.yml
+++ b/spring-petclinic-config-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     config:
       server:
         git:
-          uri: https://https://github.com/devops-petclinic-group/spring-petclinic-microservices-config
+          uri: https://github.com/devops-petclinic-group/spring-petclinic-microservices-config
           default-label: main
         # Use the File System Backend to avoid git pulling. Enable "native" profile in the Config Server.
         native:
