--- a/k8s/manifests/discovery-server-deployment.yaml
+++ b/k8s/manifests/discovery-server-deployment.yaml
@@ -28,7 +28,7 @@ spec:
           name: discovery-server
           ports:
             - containerPort: 8761
-              hostPort: 8761
+              #hostPort: 8761
               protocol: TCP
           resources:
             limits:
