--- a/k8s/manifests/config-server-deployment.yaml
+++ b/k8s/manifests/config-server-deployment.yaml
@@ -29,7 +29,7 @@ spec:
           name: config-server
           ports:
             - containerPort: 8888
-              hostPort: 8888
+              #hostPort: 8888
               protocol: TCP
           resources:
             limits:
