--- a/k8s/manifests/customers-service-deployment.yaml
+++ b/k8s/manifests/customers-service-deployment.yaml
@@ -16,15 +16,16 @@ spec:
         app: customers-service
     spec:
       containers:
-        - image: springcommunity/spring-petclinic-customers-service
+        - image: zzouhal/spring-petclinic-cloud-customers-service
           name: customers-service
           ports:
             - containerPort: 8081
-              hostPort: 8081
+              #hostPort: 8081
               protocol: TCP
           resources:
-            limits:
-              memory: "536870912"
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
@@ -36,11 +37,11 @@ spec:
                 configMapKeyRef:
                   name: mysql-config
                   key: SPRING_PROFILES_ACTIVE
-            - name: MYSQL_HOST
+            - name: MYSQL_CUSTOMERS_HOST
               valueFrom:
                 configMapKeyRef:
                   name: mysql-config
-                  key: MYSQL_HOST
+                  key: MYSQL_CUSTOMERS_HOST
             - name: MYSQL_PORT
               valueFrom:
                 configMapKeyRef:
@@ -51,11 +52,11 @@ spec:
                 configMapKeyRef:
                   name: mysql-config
                   key: MYSQL_USERNAME
-            - name: MYSQL_DATABASE
+            - name: MYSQL_CUSTOMERS_DATABASE
               valueFrom:
                 configMapKeyRef:
                   name: mysql-config
-                  key: MYSQL_DATABASE
+                  key: MYSQL_CUSTOMERS_DATABASE
       restartPolicy: Always
 status: {}
 
